feat(counter): added counter to count all documents in case isActive and isTaskActive queries are used
