# swagger.json
@@ -2391,6 +2391,22 @@
             }
           },
           {
+            "name": "isActive",
+            "in": "query",
+            "description": "Status of the activity",
+            "schema": {
+              "type": "boolean"
+            }
+          },
+          {
+            "name": "isTaskActive",
+            "in": "query",
+            "description": "Filter activities by their isTaskActive status.",
+            "schema": {
+              "type": "boolean"
+            }
+          },
+          {
             "name": "sort",
             "in": "query",
             "required": false,
@@ -2452,6 +2468,10 @@
                         "documentsTaskInactive": {
                           "type": "integer",
                           "example": 0
+                        },
+                        "totalResultQueriesActive": {
+                          "type": "integer",
+                          "example": 1
                         }
                       }
                     },
@@ -2695,6 +2715,10 @@
                         "documentsTaskInactive": {
                           "type": "integer",
                           "example": 0
+                        },
+                        "totalResultQueriesActive": {
+                          "type": "integer",
+                          "example": 1
                         }
                       }
                     },
@@ -3105,6 +3129,10 @@
                         "documentsTasksInactive": {
                           "type": "integer",
                           "example": 0
+                        },
+                        "totalResultQueriesActive": {
+                          "type": "integer",
+                          "example": 1
                         }
                       }
                     },
